2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/arc/init.c (grub_machine_init): Set clock
	frequency to 150 MHz.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Apple fixes.

	* grub-core/lib/i386/relocator16.S: Use correct __APPLE__ and not
	__APPLE_
	* grub-core/lib/i386/relocator_common.S [__APPLE__]: Fix gdtdesc
	definition.
	* grub-core/lib/i386/relocator64.S [__APPLE__]: Assemble jmp manually.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle slash in HFS label.

	* grub-core/fs/hfs.c (macroman_to_utf8): New argument slash_translate.
	(grub_hfs_dir): Tanslate slash.
	(grub_hfs_label): Don't translate slash.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/ls.c (grub_ls_list_devices): Disable
	network protocol listing since it introduces problematic dependency on
	net module.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Add Yeeloong verified hash.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Init video early on yeeloong to avoid being rebooted by watchdog.

	* grub-core/Makefile.am (gensm712): New target.
	(sm712_start.S): Likewise.
	(boot/mips/loongson/fwstart.S): Depend on sm712_start.S
	* grub-core/boot/mips/loongson/fwstart.S [!FULOONG2F]: Init SM712.
	* grub-core/video/sm712.c [GENINIT]: Generate compact init procedure
	description.
	* include/grub/vga.h: Move registry definitions to...
	* include/grub/vgaregs.h: ... here.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/decompressor/minilib.c (grub_memcmp): Fix the compare
	signedness.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix dvhtool invocation. Add arc to the list of
	platforms with firmware disk drivers in the core.

2012-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (scan_disk) [GRUB_UTIL]: Put more
	informative verbose message.